2023-11-28         Arnold D. Robbins     <arnold@skeeve.com>

	Straighten out Node_elem_new some more.  Thanks to "M"
	<c24p0101@gmail.com> for the report and to Andrew Schorr for
	the reduced test case.

	* awk.h (force_string_fmt): Don't clear NUMBER from the flags.
	(force_number): Handle Node_elem_new case. (Ooops.)
	* builtin.c (do_typeof): Make unassigned case check smarter.
	* mpfr.c (mpg_force_number): Don't clear STRING and don't
	change the string value.
	* node.c (r_force_number): Ditto.

2023-11-20         Arnold D. Robbins     <arnold@skeeve.com>

	* command.y (yylex): Change _("%s") into "%s". Sheesh.

2023-11-16         Arnold D. Robbins     <arnold@skeeve.com>

	* eval.c (cmp_scalars): Check for REGEX as well as STRING
	in order to do a string compare. Thanks to
	"*" <cl2ap0101@gmail.com> for the report.

2023-11-04         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Fix the spelling of "Ukrainian". Thanks to
	Bruce Horrocks.

2023-11-02         Arnold D. Robbins     <arnold@skeeve.com>

	* 5.3.0: Release tar ball made.

2023-10-31         Corinna Vinschen      <vinschen@redhat.com>

	* awk.h (wcitomb): Add declaration.
	* node.c (parse_escape): Use it on Cygwin.

2023-10-24         Arnold D. Robbins     <arnold@skeeve.com>

	* eval.c (setup_frame): Fix a potential use after free
	error. Thanks to Michal Jaegermann for the report.

2023-10-23         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_sub): Fix a use-after-free issue reported
	by Miguel Pineiro Jr. <mpj@pineiro.cc>.

2023-10-22         Arnold D. Robbins     <arnold@skeeve.com>

	* nonposix.h, re.c: Update coyright year.

2023-10-21         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c (parse_args): Deal better with things if -p
	given twice. Thanks to Hermann Peifer for the report.
	* Checklist: Revised a bit.
	* awkgram.y (isnoeffect): Add Op_exec_count to the list so
	that `gawk --lint --profile BEGIN{0}' also produces a lint