@@ -1,3 +1,8 @@
+2023-12-02         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* debug.c (print_array): Fix printing of multidimensional arrays.
+	Thanks to Hermann Peifer for the report.
+
 2023-11-28         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Straighten out Node_elem_new some more.  Thanks to "M"
